# clarity-types

./: .gitignore  .npmignore  Cargo.toml  README.md  index.js  native.d.ts  native.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.bin.json  version.sh
.changeset/: dirty-doors-exist.md  fifty-donkeys-rest.md  hot-gorillas-notice.md  odd-melons-beg.md  odd-worms-protect.md  silent-dolphins-protect.md  six-keys-complain.md  soft-terms-live.md  strong-toys-tap.md
.github/workflows/: CI.yml  main.yml
clarity-types/: Cargo.toml  LICENSE  README.md
clarity-types-rs/: Cargo.toml  README.md
clarity-types-rs/src/: source.rs  typescript.rs  utils.rs
clarity-types-ts/: .npmignore  CHANGELOG.md  README.md  package.json  tsconfig.json
clarity-types-ts/src/: bin.ts  index.ts  parse.ts
clarity-types/src/: analysis.rs  errors.rs  lib.rs  main.rs  typescript.rs  utils.rs
native/: CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json
native/src/: lib.rs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
src/: analysis.rs  bin.ts  main.rs  typescript.rs
(+16 files in other folders)
