[package]
name = "clarity-types"
version = "1.0.4"
edition = "2021"
description = "Generate typescript types from clarity smart contract"
license = "MIT"
authors = ["Eric Afes <eriicafes@gmail.com>"]
repository = "https://github.com/eriicafes/clarity-types"
homepage = "https://github.com/eriicafes/clarity-types#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clarity = { git = "https://github.com/stacks-network/stacks-core", rev = "5956df38f851fa46204d4e57614bf77e633d553b" }
