[package]
name = "clarity-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
clarity = { git = "https://github.com/stacks-network/stacks-core", branch = "feat/clarity-wasm-next" }
